# n19

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
Bulwark/: All.hpp  Benchmark.hpp  Bulwark.hpp  BulwarkContext.hpp  CMakeLists.txt  Case.cpp  Case.hpp  Registry.cpp  Registry.hpp  Reporting.cpp  Reporting.hpp  Suite.cpp  Suite.hpp
Bulwark/Suites/Core/: SuiteArgParse.cpp  SuiteBytes.cpp  SuiteDefer.cpp  SuiteMaybe.cpp  SuiteNothing.cpp  SuiteResult.cpp  SuiteRingStructures.cpp  SuiteStringUtil.cpp  SuiteTuple.cpp
Bulwark/Suites/Frontend/: SuiteEntity.cpp  SuiteLexer.cpp
Bulwark/Suites/Sys/: SuiteSystemError.cpp
CMake/: Arch.cmake  ClangSanitizers.cmake  Common.cmake  Platform.cmake
Core/: ArgParse.cpp  ArgParse.hpp  Attributes.hpp  Bytes.hpp  CMakeLists.txt  Callback.hpp  ClassTraits.hpp  Common.hpp  ConIO.cpp  ConIO.hpp  ConManip.cpp  ConManip.hpp  Concepts.hpp  Console.cpp  Console.hpp  Defer.hpp  Endian.hpp  Except.hpp  FileRef.cpp  FileRef.hpp  FlatProfile.hpp  Fmt.hpp  Forward.hpp  GlobalLastError.hpp  Iterator.hpp  MacroUtil.hpp  Maybe.hpp  Memory.hpp  Murmur3.hpp  NewResult.hpp  Nothing.hpp  Panic.cpp  Panic.hpp  Platform.hpp  Poly.hpp  Ref.hpp  Result.hpp  ResultMacros.hpp  RingBase.hpp  RingBuffer.cpp  (+14 more)
Framework/: CLIMain.cpp  CMakeLists.txt  README.md  Useless.cpp
Frontend/: AstNodes.hpp  BufferedLexer.hpp  CMakeLists.txt  CompilationCycle.cpp  CompilationCycle.hpp  DumpAst.cpp  Entity.cpp  Entity.hpp  EntityQualifier.cpp  EntityQualifier.hpp  EntityTable.cpp  EntityTable.hpp  ErrorCollector.cpp  ErrorCollector.hpp  FrontendContext.cpp  FrontendContext.hpp  FrontendMain.cpp  Interpreter.cpp  Interpreter.hpp  Keywords.hpp  LazyLexer.cpp  LazyLexer.hpp  Lexer.cpp  Lexer.hpp  LexerBase.cpp  LexerBase.hpp  Main.cpp  ParseContext.hpp  Parser.cpp  Parser.hpp  README.md  ShitLexer.cpp  ShitLexer.hpp  StringPool.cpp  Token.cpp  Token.hpp
Frontend/AST/: ASTNodes.hpp  DumpAST.cpp
Frontend/Common/: CompilationCycle.cpp  CompilationCycle.hpp  StringPool.cpp  StringPool.hpp
Frontend/Diagnostics/: ErrorCollector.cpp  ErrorCollector.hpp
Frontend/Entities/: Entity.cpp  Entity.hpp  EntityTable.cpp  EntityTable.hpp
Frontend/Interpreter/: Interpreter.cpp  Interpreter.hpp
Frontend/Lexer/: Keywords.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Frontend/Parser/: ParseContext.hpp  Parser.cpp  Parser.hpp
IO/: Console.cpp  Console.hpp  FileRef.cpp  Fmt.hpp  Stream.cpp  Stream.hpp
Meta/: check_linefeed_at_eof.sh
Meta/CMake/: Common.cmake  Sanitizers.cmake
Misc/: BulwarkMain.cpp  CompilerMain.cpp  Global.hpp  Macros.hpp
Native/: Handle.hpp  IODevice.cpp  IODevice.hpp  LastError.cpp  LastError.hpp  Stream.hpp  String.hpp
Sys/: BackTrace.cpp  BackTrace.hpp  Channel.hpp  Error.cpp  Error.hpp  File.cpp  File.hpp  Handle.hpp  IODevice.cpp  IODevice.hpp  LastError.cpp  LastError.hpp  Stream.hpp  String.hpp  Time.cpp  Time.hpp
System/: BackTrace.cpp  BackTrace.hpp  CMakeLists.txt  Error.cpp  Error.hpp  File.cpp  File.hpp  Handle.hpp  IODevice.cpp  IODevice.hpp  MinWin.hpp  Process.cpp  Process.hpp  SharedRegion.cpp  SharedRegion.hpp  String.hpp  Time.cpp  Time.hpp  Win32.hpp
Tests/: CMakeLists.txt  Entry.cpp
Tests/Core/: CMakeLists.txt  SuiteArgParse.cpp  SuiteBytes.cpp  SuiteDefer.cpp  SuiteMaybe.cpp  SuiteMurmur3.cpp  SuiteResult.cpp  SuiteRingStructures.cpp  SuiteStream.cpp  SuiteStringPool.cpp  SuiteStringUtil.cpp
Tests/Frontend/: CMakeLists.txt  SuiteEntity.cpp  SuiteLexer.cpp
Tests/Runners/: ParentMain.cpp  RunnerMain.cpp
Tests/Suites/Core/: SuiteArgParse.cpp  SuiteMaybe.cpp  SuiteMurmur3.cpp  SuiteNothing.cpp  SuiteResult.cpp  SuiteStream.cpp  SuiteStringUtil.cpp
Tests/Suites/Frontend/: SuiteEntity.cpp  SuiteLexer.cpp
Tests/Suites/IO/: SuiteStream.cpp
Tests/Suites/System/: SuiteSystemError.cpp
Tests/System/: CMakeLists.txt  SuiteSystemError.cpp
n19/: CMakeLists.txt
n19/Core/: ArgParse.cpp  ArgParse.hpp  Bytes.hpp  CMakeLists.txt  ClassTraits.hpp  Concepts.hpp  Console.cpp  Console.hpp  Defer.hpp  FlatProfile.hpp  Fmt.hpp  Iterator.hpp  MacroUtil.hpp  Maybe.hpp  Murmur3.hpp  Panic.cpp  Panic.hpp  Platform.hpp  Result.hpp  Stream.cpp  Stream.hpp  StringPool.cpp  StringPool.hpp  StringUtil.cpp  StringUtil.hpp  Try.hpp  TypeTraits.hpp
n19/Frontend/: FrontendContext.cpp  FrontendContext.hpp  FrontendMain.cpp
n19/Frontend/AST/: ASTNodes.hpp  DumpAST.cpp
n19/Frontend/Common/: CompilationCycle.cpp  CompilationCycle.hpp
n19/Frontend/Diagnostics/: ErrorCollector.cpp  ErrorCollector.hpp
n19/Frontend/Entities/: Entity.cpp  Entity.hpp  EntityTable.cpp  EntityTable.hpp
n19/Frontend/Lexer/: Keywords.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
n19/Frontend/Parser/: ParseContext.hpp  Parser.cpp  Parser.hpp
n19/Include/: AstNodes.h  ConManip.h  Concepts.h  Defer.h  Entity.h  EntityQualifier.h  EntityTable.h  ErrorCollector.h  FileRef.h  Fmt.h  GlobalLastError.h  Lexer.h  Panic.h  Result.h  ResultMacros.h  StopWatch.h  Token.h  TypeDescriptor.h
n19/Include/Core/: ArgParse.h  Attributes.h  Bytes.h  ConManip.h  Concepts.h  Defer.h  FileRef.h  GlobalLastError.h  Panic.h  Result.h  ResultMacros.h  RingBuffer.h
n19/Include/Frontend/: AstNodes.h  Entity.h  EntityQualifier.h  EntityTable.h  ErrorCollector.h  Lexer.h  Token.h
n19/Include/Native/: Handle.h  IODevice.h  LastError.h  Stream.h  String.h
n19/Src/: ConManip.cpp  DumpAst.cpp  Entity.cpp  EntityQualifier.cpp  EntityTable.cpp  ErrorCollector.cpp  FileRef.cpp  Lexer.cpp  Main.cpp  Token.cpp  TypeDescriptor.cpp
n19/Src/Core/: ArgParse.cpp  ConManip.cpp  FileRef.cpp  RingBuffer.cpp
n19/Src/Frontend/: DumpAst.cpp  Entity.cpp  EntityQualifier.cpp  EntityTable.cpp  ErrorCollector.cpp  Lexer.cpp  Token.cpp
n19/Src/Native/: IODevice.cpp  LastError.cpp
n19/System/: BackTrace.cpp  BackTrace.hpp  Error.cpp  Error.hpp  File.cpp  File.hpp  Handle.hpp  IODevice.cpp  IODevice.hpp  PageAllocator.hpp  Process.cpp  Process.hpp  SharedRegion.cpp  SharedRegion.hpp  String.hpp  Time.cpp  Time.hpp  Units.hpp  Win32.hpp
